--- a/docs/code-samples/automated-code-sample-urls.mdx
+++ b/docs/code-samples/automated-code-sample-urls.mdx
@@ -4,6 +4,8 @@ sidebar_label: "Automated Code Sample URLs"
 slug: "/automated-code-sample-urls/"
 ---
 
+import { Callout } from "~/components";
+
 # Automated code sample URLs
 
 For paid accounts, Speakeasy can automatically apply code samples to your base OpenAPI document in the cloud, with no intervention required.
@@ -12,13 +14,15 @@ This is the most elegant solution for exposing code samples to documentation pro
 In the **APIs** tab of the dashboard, look for an entry marked as **Combined Spec**.
 Click into the entry to see a breakdown of the base OpenAPI document and code samples overlays that were used to produce it.
 
-<div data-screenshot data-darkened>
-  <img src="../assets/code-samples/combined-spec.png" alt="Screenshot of the dashboard showing a Combined Spec." />
-</div>
+<Screenshot darkened>
+  ![Screenshot of the dashboard showing a Combined
+  Spec.](../assets/code-samples/combined-spec.png)
+</Screenshot>
 
-<div data-screenshot data-darkened>
-  <img src="../assets/code-samples/combined-spec-details.png" alt="Screenshot of the dashboard showing Combined Spec details." />
-</div>
+<Screenshot darkened>
+  ![Screenshot of the dashboard showing Combined Spec
+  details.](../assets/code-samples/combined-spec-details.png)
+</Screenshot>
 
 To configure one of these combined code sample specs as a public URL for documentation providers, visit the **Docs** tab in the Speakeasy dashboard.
 
@@ -31,9 +35,10 @@ Based on this, Speakeasy generates a combined spec in the background that contai
 
 If you have not yet completed your SDK setup in GitHub, you may see a notification like the following in the **Docs** tab.
 
-<div data-screenshot data-darkened>
-  <img src="../assets/code-samples/automatic-code-samples-url-unavailable.png" alt="Automatic code sample URLs not available." />
-</div>
+<Screenshot darkened>
+  ![Automatic code sample URLs not
+  available.](../assets/code-samples/automatic-code-samples-url-unavailable.png)
+</Screenshot>
 
 To use automated code sample URLs, your SDK must meet the following requirements:
 
@@ -51,31 +56,30 @@ When your setup is correct, the following will be available in the **APIs** tab 
 
 Revisions to the base OpenAPI document and code sample overlays must be tagged with `main`, which is why using GitHub Actions is required.
 
-<div data-callout data-title="Alternatives to configuring sdk-publish.yaml:" data-variant="warning">
-  <p>
-    If you are not ready to set up publishing, you can temporarily set up the following tagging action in each of your SDK repos.
-  </p>
+<Callout title="Alternatives to configuring sdk-publish.yaml:" variant="warning">
+If you are not ready to set up publishing, you can temporarily set up the following tagging action in each of your SDK repos.
 
-  ```yaml .github/workflows/tagging.yaml
-  name: Speakeasy Tagging
-  permissions:
-    checks: write
-    contents: write
-    pull-requests: write
-    statuses: write
-  "on":
-    push:
-      branches:
-        - main
-      paths: []
-    workflow_dispatch: {}
-  jobs:
-    tag:
-      uses: speakeasy-api/sdk-generation-action/.github/workflows/tag.yaml@v15
-      with:
-        registry_tags: main
-      secrets:
-        github_access_token: ${{ secrets.GITHUB_TOKEN }}
-        speakeasy_api_key: ${{ secrets.SPEAKEASY_API_KEY }}
-  ```
-</div>
+```yaml .github/workflows/tagging.yaml
+name: Speakeasy Tagging
+permissions:
+  checks: write
+  contents: write
+  pull-requests: write
+  statuses: write
+"on":
+  push:
+    branches:
+      - main
+    paths: []
+  workflow_dispatch: {}
+jobs:
+  tag:
+    uses: speakeasy-api/sdk-generation-action/.github/workflows/tag.yaml@v15
+    with:
+      registry_tags: main
+    secrets:
+      github_access_token: ${{ secrets.GITHUB_TOKEN }}
+      speakeasy_api_key: ${{ secrets.SPEAKEASY_API_KEY }}
+```
+
+</Callout>
