--- a/docs/code-samples/code-samples-api.mdx
+++ b/docs/code-samples/code-samples-api.mdx
@@ -4,14 +4,16 @@ title: The Code Samples API
 description: "Fetch usage snippets for Speakeasy-generated SDKs using the Code Samples API."
 ---
 
+import { Callout } from "~/components";
+
 # The Code Samples API
 
-<div data-callout data-title="NOTE" data-variant="info">
+<Callout title="NOTE" variant="info">
 
 This feature is for **Speakeasy Enterprise** customers. To inquire about
 access, please contact a Speakeasy representative, or [book a demo].
 
-</div>
+</Callout>
 
 [book a demo]: /book-demo
 
@@ -32,7 +34,7 @@ This API is ideal for organizations who:
 
 ### Prerequisites
 
-<div data-callout data-title="IMPORTANT" data-variant="warning" className="[&_ul]:list-['✓__']">
+<Callout title="IMPORTANT" variant="warning" className="[&_ul]:list-['✓__']">
 
 To use the Code Samples API, the following prerequisites are required:
 
@@ -41,7 +43,7 @@ To use the Code Samples API, the following prerequisites are required:
   Speakeasy SDK, and
 - A Speakeasy API Key for the workspace associated with the desired SDK.
 
-</div>
+</Callout>
 
 [Automated Code Sample URL]: /docs/code-samples/automated-code-sample-urls
 
@@ -156,3 +158,4 @@ curl -G "https://app.speakeasy.com/v1/code_sample" \
   "message": "no snippets found for given operation IDs and languages -- err_not_found: not found"
 }
 ```
+
