--- a/docs/code-samples/generate-code-samples.mdx
+++ b/docs/code-samples/generate-code-samples.mdx
@@ -4,6 +4,8 @@ sidebar_label: "Generate Code Samples"
 slug: "/code-samples/"
 ---
 
+import { Callout } from "~/components";
+
 # Generating code samples for your SDK
 
 This guide explains how code samples are generated for an SDK and how to apply them to an OpenAPI document.
@@ -40,11 +42,11 @@ targets:
 In the above example, a code samples overlay containing TypeScript usage snippets for all operations in the `my-source` OpenAPI document will be
 generated and written to `code-samples.yaml` and pushed to the Speakeasy registry.
 
-<div data-callout data-title="Why use the registry?" data-variant="success">
+<Callout title="Why use the registry?" variant="success">
   Speakeasy will automatically load code samples that are pushed to the registry and apply them to your OpenAPI document.
   This saves you from having to manually configure a workflow to integrate your code samples into your base document.
   Removing the `registry` section from your workflow file will disable this feature and require you to manually apply code samples to your OpenAPI document.
-</div>
+</Callout>
 
 ### Overrides
 
@@ -128,3 +130,4 @@ jobs:
 ```
 
 Now you can run `speakeasy run`. If you use registry references, the source and code samples will always be up to date with the main branch of your SDK repos.
+
