--- a/openapi-hub/paths/operations/content.mdx
+++ b/openapi-hub/paths/operations/content.mdx
@@ -22,7 +22,7 @@ The value associated with each key is a [Media Type Object](#media-type-object) 
 
 Media type keys can include wildcards indicating a range of media types they cover. For example, `application/*` would match `application/json`, `application/xml`, and so on. It can be explicitly defined to match only a single media type, for example, `application/json; charset=utf-8`.
 
-<Callout type="warning" emoji="⚠️">
+<Callout type="warning" title="⚠️">
 **Avoid wildcard media types where possible:** While using wildcards in defining content types is convenient, it might lead to ambiguous results if the client and server do not handle the same range of media types. Use specific media types where possible to avoid ambiguity.
 </Callout>
 
